# architecture-practice-1

./: .gitignore  CMakeLists.txt  README.md  bmp.cpp
aos/: aos.h  gaussianblur.cpp  gaussianbluraos.cpp  grayscale.cpp  grayscaleaos.cpp  histogram.cpp  histogramaos.cpp  imageaos.cpp  imgaos.cpp
common/: common.cpp  common.h  progargs.cpp
histograms/: ballon.hst
histograms/test/: amphora.hst  car.hst  elephant.hst  landscape.hst  plane.hst  pyramid.hst  snake.hst
soa/: gaussianblur.cpp  grayscale.cpp  histogram.cpp  imagesoa.cpp  imgsoa.cpp  soa.h
src/unit_test/: CMakeLists.txt
test/: CMakeLists.txt  testaos.cpp  testsoa.cpp
